# SANuSim

./: .gitignore  CMakeLists.txt  NuMain.cc  SunLayers.root  test.cc  txt_to_root.cc
CR_models/: fluxScaling.py
crmc/: CMakeLists.txt
crmc/libCrmc_CMakeLists/: CMakeLists.txt
crmc/libGeantCrmc_CMakeLists/: CMakeLists.txt
include/: NuActionInitialization.hh  NuDetectorConstruction.hh  NuEventAction.hh  NuPhysicsList.hh  NuPrimaryGeneratorAction.hh  NuRunAction.hh  NuStackingAction.hh  NuThreadLocalContainer.hh
results/: 100k_10GeV.root  100k_10GeV_CUT.root  100k_1GeV.root  100k_1GeV_CUT.root
results/10k_1TeV/: 10k_1TeV.root  electron.root  gamma.root  positron.root
src/: NuActionInitialization.cc  NuDetectorConstruction.cc  NuEventAction.cc  NuPhysicsList.cc  NuPrimaryGeneratorAction.cc  NuRunAction.cc  NuStackingAction.cc  NuThreadLocalContainer.cc
